# E1PCM30-Simulator

./: .gitignore  README.md
examples/: testTXcode.txt
receiverE1/: CMakeLists.txt  aligner.cpp  aligner.h  frameimporter.cpp  frameimporter.h  interpreter.cpp  interpreter.h  main.cpp  main.h  receiverE1
src/: CMakeLists.txt  aligner.h  frameimporter.cpp  interpreter.cpp  interpreter.h  receiverE1
transmitterE1/: CMakeLists.txt  generator.cpp  generator.h  main.cpp  main.h  transmitterE1  writer.cpp  writer.h
